--- a/src/app/components/no-data/no-data.component.html
+++ b/src/app/components/no-data/no-data.component.html
@@ -1,1 +1,11 @@
-<p>no-data works!</p>
+<div class="no-data-container">
+    <div class="illustration">
+        <img src="assets/no-data.jpg" alt="No Data" />
+    </div>
+    <div class="content">
+      <h5 class="main">
+        We could not find any result for you
+      </h5>
+      <p> Please change your filter settings and check again!</p>
+    </div>
+  </div>
