--- a/src/app/modules/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard.component.scss
@@ -1,5 +1,10 @@
 .dashboard-container {
     padding: 1em 2em;
+    background-color: #FFFF;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
     .toolbar {
         display: flex;
         flex-direction: row;
@@ -16,3 +21,9 @@
         flex-flow: row wrap;
     }
 }
+
+@media (max-width: 400px) {
+    .dashboard-container {
+        padding-top: 3em;
+    }
+  }
