--- a/src/variables.scss
+++ b/src/variables.scss
@@ -12,3 +12,8 @@ $tr-blue-extra-light: #EBF0F2;
 $menu-width-desktop: 240px;
 $menu-width-tablet: 90px;
 $menu-width-smartphone: 230px;
+
+// Spacing
+$sm: 1rem;
+$md: 2.5rem;
+$lg: 4rem;
