--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -62,7 +62,10 @@
                 font-size: 10px;
                 font-weight: bold;
                 letter-spacing: .75px;
-                text-align: center;
+                max-height: 20px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
             }
         }
         &--address {
